# agents

./: Makefile  NOTICE  README.md  go.mod  go.sum  main.go  main_test.go
.github/workflows/: ci.yml  release.yml
backup/: go.mod  go.sum  pmx-backup.conf.example
backup/cmd/pmx-backup/: main.go  main_test.go
backup/internal/archive/: roots.go  roots_test.go
backup/internal/config/: config.go  config_test.go
backup/internal/pbs/: pbs.go
backup/internal/retention/: retention.go  retention_test.go
backup/internal/s3/: s3.go  s3_test.go
backup/internal/sftp/: sftp.go  sftp_test.go
backup/internal/sync/: sync.go  sync_test.go
backup/internal/verify/: verify.go  verify_test.go
backup/internal/vzdump/: resolve.go  resolve_test.go  vzdump.go  vzdump_test.go
commands/: dispatcher.go  dispatcher_test.go
config/: config.go  config_test.go
console-broker/: README.md  go.mod  go.sum  pmx-console-broker.conf.example
console-broker/cmd/pmx-console-broker/: main.go  main_test.go  replay_store.go
console-broker/internal/bridge/: bridge.go  bridge_test.go
console-broker/internal/config/: config.go  config_test.go
console-broker/internal/serial/: serial.go
console-broker/internal/session/: session.go  (+1 more)
core/: go.mod  pmx-core.conf.example
core/test/: integration_test.go
example/: main.go
hardware-installer/: go.mod  go.sum  pmx-hardware-installer.conf.example
hypervisor/: go.mod  go.sum  pmx-hypervisor.conf.example
network/: Cargo.toml  pmx-network.conf.example
network/src/: config.rs  main.rs  persistence.rs
network/src/audit/: mod.rs
network/src/bridge/: mod.rs
network/src/netlink/: mod.rs
network/src/nftables/: mod.rs
network/src/ovs/: mod.rs
network/src/sriov/: mod.rs
network/src/vlan/: mod.rs
network/src/wireguard/: mod.rs
scripts/: build-release.sh  install-agent.sh  real-cluster-smoke.sh
security/: go.mod  go.sum  pmx-security.conf.example
shared/: go.mod  go.sum
shared-rust/: Cargo.toml
shared-rust/src/: audit.rs  capability.rs  envelope.rs  keyset.rs  lib.rs  replay.rs  wsclient.rs
shared-rust/testdata/: envelope-v1-rust.cbor  envelope-v1.cbor  pubkey-rust.hex  pubkey.hex  rust-canonical.hex
shared/audit/: audit.go  audit_test.go  open_fallback.go
shared/capability/: capability.go  capability_test.go
shared/envelope/: envelope.go  envelope_test.go  errors.go  interop_rust_test.go  keyset.go  replay.go  replay_keyset_test.go
shared/logging/: logging.go  logging_test.go
shared/preflight/: preflight.go  preflight_files_test.go  preflight_mock_bin_test.go  preflight_run_test.go  preflight_test.go
shared/wsclient/: client.go  client_handler_test.go  client_test.go  client_ws_test.go  heartbeat_assert_test.go  wrap_result_test.go
storage/: go.mod  go.sum  pmx-storage.conf.example
telemetry/: go.mod  go.sum  pmx-telemetry.conf.example
updater/: Cargo.toml  build.rs  pmx-updater.conf.example
updater/src/: config.rs  envelope.rs  lib.rs  main.rs
updater/src/agent_update/: fetch.rs  health.rs  manifest.rs  mod.rs  rollback.rs  swap.rs  verify.rs
updater/src/maintenance/: mod.rs  window.rs
updater/src/os_update/: apt.rs  mod.rs
updater/tests/: envelope_test.rs  fetch_test.rs  health_test.rs  integration.rs  rollback_test.rs
wgtunnel/: manager.go  manager_test.go
wsclient/: client.go  client_test.go
(+205 files in other folders)
