[package]
name = "pmx-updater"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
hex = "0.4"
pmx-agents-shared = { path = "../shared-rust" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
fs4 = "0.12"

[dev-dependencies]
proptest = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"

[lints.rust]
warnings = "deny"
